[package]
name = "wstest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "0.16.1", features = ["connect"] }
log = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
futures-channel = "0.3"
tokio = { version = "1.0.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time"] }
url = "2.0.0"
env_logger = "0.7"
tungstenite = { version = "0.16.0", default-features = false }

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

